# Snake

./: CMakeLists.txt  LICENSE  README.md
src/: Core.c  Core.h  Drawing.c  Drawing.h  Game.c  Main.c  Orb.c  SaveData.c  SaveData.h  Snake.c  Snake.h  Sound.c  Sound.h
src/Objects/: Orb.c  Orb.h  Snake.c  Snake.h
src/States/: End.c  End.h  Gameplay.c  Gameplay.h  Menu.c  Menu.h  Pause.c  Pause.h  States.c  States.h
